--- a/index.html
+++ b/index.html
@@ -6,53 +6,48 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-	<header>
+<!-- Header -->
+	
 	<nav class="container">
-		<h3>Greg's List</h3>
+		<header id="logo">
+			<h1>Greg's List</h1>
+		</header>
 			<ul>
-				<li><a href="">Post</a></li>
-				<li><a href="">Account</a></li>
+				<li><a href="#">Post</a></li>
+				<li><a href="#">Account</a></li>
 			</ul>
 	</nav>
-	</header>
-	 <form action="/search_jobs.com" class="container"> 
-		<label>
-			<h4>Search Jobs</h4>
-				<input type="text" placeholder="Search software jobs">
-				<a href="/search_jobs.com"><img src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png" alt="Search image" class="mag"></a>
-		</label> 
+	
+
+<!-- Search -->
+<main>
+	<section class="search">
+	 <form action="#" class="container"> 
+		<label for="search-input">Search Jobs</label>
+			<input type="text" placeholder="Search software jobs"
+				id="search-input">
+			<input type="image" src="magnifying-glass.png" alt="Submit" id="mag">	
+			
+
 	</form>
+
+	<section class="page-nav">
 		<nav class="bot-nav">
-			<div class="page-nav">
-				<ul>
-					<li><a href="" class="nav-button">< prev</a></li>
-					<li>1 to 100 of 179</li>
-					<li><a href="">next ></a></li>
-				</ul>
-			</div>
+			<ul>
+				<li><a href="#" class="nav-button">&lt; prev</a></li>
+				<li>1 to 100 of 179</li>
+				<li><a href="">next &gt;</a></li>
+			</ul>
 		</nav>
-	<section>
-		<div>
-			<ul>
-				<li class="det">June 22</li>
-				<li><a href="">Technical Project Manager</a></li>
-				<li class="det">Midtown East</li>
-			</ul>
-		</div>
-		<div>
-			<ul>
-				<li class="det">June 21</li>
-				<li><a href="">Frontend Developer</a></li>
-				<li class="det">SoHo</li>
-			</ul>
-		</div>
-		<div>
-			<ul>
-				<li class="det">June 20</li>
-				<li><a href="">Senioer Python Developer / Cofounder</a></li>
-				<li class="det">Flatiron</li>
-			</ul>
-		</div>
 	</section>
+
+	<section class="listings">
+		<ul>
+			<li>June 22<a href="#">Technical Project Manager</a>Midtown East</li>
+			<li>June 21<a href="#">Frontend Developer</a>SoHo</li>
+			<li>June 20<a href="#">Senioer Python Developer / Cofounder</a>Flatiron</li>
+		</ul>
+	</section>
+
 </body>
 </html>
